src/dart_vips_ops.h

// ----- Load / Save --------------------------------------------------------

// vips_image_new_from_file with no extra vararg options (adds NULL sentinel)
VipsImage* dart_vips_image_new_from_file(const char* path);
// vips_image_write_to_file with no extra vararg options (adds NULL sentinel)
int dart_vips_image_write_to_file(VipsImage* in, const char* path);
// vips_image_write_to_buffer with suffix string (e.g. ".jpg[Q=80,strip]")
int dart_vips_image_to_buffer(
    VipsImage* in,
    const char* suffix,
    void** buf,
    size_t* len);
// ----- Resize / Thumbnail -------------------------------------------------

// vips_thumbnail_image: width-only (height=0 means unlimited)
int dart_vips_thumbnail(
    VipsImage* in,
    VipsImage** out,
    int width,
    int height,
    VipsInteresting crop);
// vips_thumbnail_buffer: create thumbnail directly from encoded bytes
int dart_vips_thumbnail_buffer(
    const void* buf,
    size_t len,
    VipsImage** out,
    int width,
    int height,
    VipsInteresting crop);
// vips_resize with optional vertical scale (0 = same as hscale)
int dart_vips_resize(
    VipsImage* in,
    VipsImage** out,
    double hscale,
    double vscale);
// vips_reduce
int dart_vips_reduce(
    VipsImage* in,
    VipsImage** out,
    double hshrink,
    double vshrink);
// vips_smartcrop
int dart_vips_smartcrop(
    VipsImage* in,
    VipsImage** out,
    int width, int height,
    VipsInteresting interesting);
// vips_rot (90° increments only)
int dart_vips_rot(
    VipsImage* in,
    VipsImage** out,
    VipsAngle angle);
// vips_similarity (arbitrary angle)
int dart_vips_similarity(
    VipsImage* in,
    VipsImage** out,
    double angle);
// Legacy unref helper (kept for backwards compat, prefer dart_vips_slot_finalizer).
void dart_vips_unref_void(void* obj);
// vips_image_set_int
void dart_vips_image_set_int(VipsImage* in, const char* name, int value);
// vips_image_set_double
void dart_vips_image_set_double(VipsImage* in, const char* name, double value);
// vips_image_set_string
void dart_vips_image_set_string(VipsImage* in, const char* name, const char* str);
// vips_image_remove — returns non-zero on success
int dart_vips_image_remove(VipsImage* in, const char* name);