lib/src/bindings/libvips_bindings.dart


  late final _dart_vips_image_new_from_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<VipsImage> Function(ffi.Pointer<ffi.Char>)
        >
      >('dart_vips_image_new_from_file');
  late final _dart_vips_image_new_from_file = _dart_vips_image_new_from_filePtr
      .asFunction<ffi.Pointer<VipsImage> Function(ffi.Pointer<ffi.Char>)>();

  int dart_vips_image_remove(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _dart_vips_image_remove(in$, name);
  }

  late final _dart_vips_image_removePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<VipsImage>, ffi.Pointer<ffi.Char>)
        >
      >('dart_vips_image_remove');
  late final _dart_vips_image_remove = _dart_vips_image_removePtr
      .asFunction<
        int Function(ffi.Pointer<VipsImage>, ffi.Pointer<ffi.Char>)
      >();

  void dart_vips_image_set_double(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Char> name,
    double value,
  ) {
    return _dart_vips_image_set_double(in$, name, value);
  }

  late final _dart_vips_image_set_doublePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Char>,
            ffi.Double,
          )
        >
      >('dart_vips_image_set_double');
  late final _dart_vips_image_set_double = _dart_vips_image_set_doublePtr
      .asFunction<
        void Function(ffi.Pointer<VipsImage>, ffi.Pointer<ffi.Char>, double)
      >();

  void dart_vips_image_set_int(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Char> name,
    int value,
  ) {
    return _dart_vips_image_set_int(in$, name, value);
  }

  late final _dart_vips_image_set_intPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('dart_vips_image_set_int');
  late final _dart_vips_image_set_int = _dart_vips_image_set_intPtr
      .asFunction<
        void Function(ffi.Pointer<VipsImage>, ffi.Pointer<ffi.Char>, int)
      >();

  void dart_vips_image_set_string(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> str,
  ) {
    return _dart_vips_image_set_string(in$, name, str);
  }

  late final _dart_vips_image_set_stringPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('dart_vips_image_set_string');
  late final _dart_vips_image_set_string = _dart_vips_image_set_stringPtr
      .asFunction<
        void Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int dart_vips_image_to_buffer(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Char> suffix,
    ffi.Pointer<ffi.Pointer<ffi.Void>> buf,
    ffi.Pointer<ffi.Size> len,
  ) {
    return _dart_vips_image_to_buffer(in$, suffix, buf, len);
  }

  late final _dart_vips_image_to_bufferPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Void>>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('dart_vips_image_to_buffer');
  late final _dart_vips_image_to_buffer = _dart_vips_image_to_bufferPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Void>>,
          ffi.Pointer<ffi.Size>,
        )
      >();

  int dart_vips_image_write_to_file(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _dart_vips_image_write_to_file(in$, path);
  }

  late final _dart_vips_image_write_to_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<VipsImage>, ffi.Pointer<ffi.Char>)
        >
      >('dart_vips_image_write_to_file');
  late final _dart_vips_image_write_to_file = _dart_vips_image_write_to_filePtr
      .asFunction<
        int Function(ffi.Pointer<VipsImage>, ffi.Pointer<ffi.Char>)
      >();

  int dart_vips_reduce(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    double hshrink,
    double vshrink,
  ) {
    return _dart_vips_reduce(in$, out, hshrink, vshrink);
  }

  late final _dart_vips_reducePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.Double,
            ffi.Double,
          )
        >
      >('dart_vips_reduce');
  late final _dart_vips_reduce = _dart_vips_reducePtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          double,
          double,
        )
      >();

  int dart_vips_resize(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    double hscale,
    double vscale,
  ) {
    return _dart_vips_resize(in$, out, hscale, vscale);
  }

  late final _dart_vips_resizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.Double,
            ffi.Double,
          )
        >
      >('dart_vips_resize');
  late final _dart_vips_resize = _dart_vips_resizePtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          double,
          double,
        )
      >();

  int dart_vips_rot(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    VipsAngle angle,
  ) {
    return _dart_vips_rot(in$, out, angle.value);
  }

  late final _dart_vips_rotPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.UnsignedInt,
          )
        >
      >('dart_vips_rot');
  late final _dart_vips_rot = _dart_vips_rotPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          int,
        )
      >();

  int dart_vips_similarity(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    double angle,
  ) {
    return _dart_vips_similarity(in$, out, angle);
  }

  late final _dart_vips_similarityPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.Double,
          )
        >
      >('dart_vips_similarity');
  late final _dart_vips_similarity = _dart_vips_similarityPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          double,
        )
      >();

  int dart_vips_smartcrop(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    int width,
    int height,
    VipsInteresting interesting,
  ) {
    return _dart_vips_smartcrop(in$, out, width, height, interesting.value);
  }

  late final _dart_vips_smartcropPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.Int,
            ffi.Int,
            ffi.UnsignedInt,
          )
        >
      >('dart_vips_smartcrop');
  late final _dart_vips_smartcrop = _dart_vips_smartcropPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          int,
          int,
          int,
        )
      >();

  int dart_vips_thumbnail(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    int width,
    int height,
    VipsInteresting crop,
  ) {
    return _dart_vips_thumbnail(in$, out, width, height, crop.value);
  }

  late final _dart_vips_thumbnailPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.Int,
            ffi.Int,
            ffi.UnsignedInt,
          )
        >
      >('dart_vips_thumbnail');
  late final _dart_vips_thumbnail = _dart_vips_thumbnailPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          int,
          int,
          int,
        )
      >();

  int dart_vips_thumbnail_buffer(
    ffi.Pointer<ffi.Void> buf,
    int len,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    int width,
    int height,
    VipsInteresting crop,
  ) {
    return _dart_vips_thumbnail_buffer(
      buf,
      len,
      out,
      width,
      height,
      crop.value,
    );
  }

  late final _dart_vips_thumbnail_bufferPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Size,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.Int,
            ffi.Int,
            ffi.UnsignedInt,
          )
        >
      >('dart_vips_thumbnail_buffer');
  late final _dart_vips_thumbnail_buffer = _dart_vips_thumbnail_bufferPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          int,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          int,
          int,
          int,
        )
      >();

  void dart_vips_unref_void(ffi.Pointer<ffi.Void> obj) {
    return _dart_vips_unref_void(obj);
  }

  late final _dart_vips_unref_voidPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'dart_vips_unref_void',
      );
  late final _dart_vips_unref_void = _dart_vips_unref_voidPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> vips_error_buffer() {
    return _vips_error_buffer();
  }

  late final _vips_error_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'vips_error_buffer',
      );
  late final _vips_error_buffer = _vips_error_bufferPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  void vips_error_clear() {
    return _vips_error_clear();
  }

  late final _vips_error_clearPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('vips_error_clear');
  late final _vips_error_clear = _vips_error_clearPtr
      .asFunction<void Function()>();

  int vips_init(ffi.Pointer<ffi.Char> argv0) {
    return _vips_init(argv0);
  }

  late final _vips_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'vips_init',
      );
  late final _vips_init = _vips_initPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  void vips_shutdown() {
    return _vips_shutdown();
  }

  late final _vips_shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('vips_shutdown');
  late final _vips_shutdown = _vips_shutdownPtr.asFunction<void Function()>();

  int vips_version(int flag) {
    return _vips_version(flag);
  }

  late final _vips_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('vips_version');
  late final _vips_version = _vips_versionPtr.asFunction<int Function(int)>();
}

typedef GByteArray = _GByteArray;
typedef GData = _GData;
typedef GHashTable = _GHashTable;
typedef GMutex = _GMutex;
typedef GObject = _GObject;
typedef GObjectClass = _GObjectClass;
typedef GObjectConstructParam = _GObjectConstructParam;
